<resources>
    <string name="app_name">team-apt-take-home</string>
    <string name="toolbar_title">Hello, Gavin!</string>
    <string name="bottom_nav">.</string>
    <string name="home_card_date">October 11, 2021</string>
    <string name="home_card_title">Energy saving</string>
    <string name="home_card_percentage">30%</string>
    <string name="home_card_voltage">20.5kWh</string>
    <string name="home_device">My device</string>
    <string name="content_description_media">Image of an icon</string>
    <string name="progress_bar_counter_text">Current <br/> Temperature</string>
    <string name="power_user_toolbar_title">Power user</string>
    <string name="air_conditioner_toolbar_title">Air Conditioner</string>
</resources>